# pcm

./: .gitignore  CMakeLists.txt  conanfile.py
.github/workflows/: ci-bandit.yml
src/: CMakeLists.txt  cpucounters.cpp  msr.cpp  pci.cpp  pci.h  pcm-sensor-server.cpp  pcm-sensor-server.service.in  pcm.cpp  tpmi.cpp  utils.cpp  utils.h
src/cmake/: pcmConfig.cmake.in
src/daemon/: daemon.cpp
test_package/: CMakeLists.txt  conanfile.py
tests/: CMakeLists.txt
tests/utests/: CMakeLists.txt
